# aideml

./: .dockerignore  .gitignore  CLAUDE.md  CONFIGURATION_API_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
aide/: __init__.py  agent.py  interpreter.py  journal.py  journal2report.py  run.py
aide-backend/: Dockerfile  README.md  README_CONFIG_API.md  README_PROFILE_MANAGEMENT.md  main.py  models.py  pyproject.toml  requirements.txt  test_basic.py  test_integration.py  websocket_manager.py
aide-backend/database/: __init__.py  init_db.py  models.py
aide-backend/docs/: PROFILE_MANAGEMENT_API.md  __init__.py  config_api_examples.py  profile_management_examples.py
aide-backend/models/: __init__.py  config_models.py  profile_models.py  template_models.py  validation_models.py
aide-backend/routers/: __init__.py  config_router.py  profile_router.py
aide-backend/schemas/: __init__.py  config_schema.py
aide-backend/services/: api_key_service.py  config_service.py  example_task_service.py  experiment_service.py  file_service.py  model_compatibility_service.py  profile_service.py  storage_service.py  template_service.py  validation_service.py  visualization_service.py
aide-backend/static/: .gitkeep
aide-backend/templates/: comprehensive_analysis.yaml  cost_optimized.yaml  educational.yaml  quick_experiment.yaml  research_focused.yaml
aide-backend/tests/: __init__.py  test_config_service.py  test_profile_service.py  test_template_service.py
aide-frontend/: .env.local  CONFIG_MANAGEMENT_SUMMARY.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: 01-current-architecture.md  02-component-mapping.md  03-migration-strategy.md  04-technical-specifications.md  05-api-design.md  06-implementation-examples.md  README.md
sample_results/: bike-sharing-demand.py  career-con-2019.py  cat-in-the-dat-ii.py  cat-in-the-dat.py  ciphertext-challenge-ii.py  ciphertext-challenge-iii.py  competitive-data-science-predict-future-sales.py  digit-recognizer.py  dont-overfit-ii.py  facial-keypoints-detection.py  forest-cover-type-prediction.py  godaddy-microbusiness-density-forecasting.py  home-data-for-ml-course.py  house-prices-advanced-regression-techniques.py  icr-identify-age-related-conditions.py  jigsaw-toxic-comment-classification-challenge.py  new-york-city-taxi-fare-prediction.py  nlp-getting-started.py  optiver-trading-at-the-close.py  playground-series-s3e1.py  playground-series-s3e11.py  playground-series-s3e13.py  playground-series-s3e14.py  playground-series-s3e15.py  playground-series-s3e16.py  playground-series-s3e17.py  playground-series-s3e18.py  playground-series-s3e19.py  playground-series-s3e20.py  playground-series-s3e22.py  playground-series-s3e23.py  playground-series-s3e24.py  playground-series-s3e25.py  playground-series-s3e26.py  playground-series-s3e3.py  playground-series-s3e5.py  playground-series-s3e7.py  playground-series-s3e9.py  playground-series-s4e1.py  playground-series-s4e2.py  (+26 more)
(+62 files in other folders)
