[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aide-ml"
dynamic = ["version"]
description = "An autonomous AI agent for data science and machine learning"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AIDE ML Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "anthropic[vertex]>=0.39.0",
    "colorama>=0.4.6",
    "datasets>=2.19.0",
    "gradio>=5.0.1",
    "ipykernel>=6.29.4",
    "joblib>=1.4.0",
    "loguru>=0.7.2",
    "matplotlib>=3.8.4",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "openai>=1.34.0",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "tqdm>=4.66.4",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.scripts]
aide = "aide.run:main"

[tool.setuptools_scm]
write_to = "aide/_version.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RET", "SIM"]
ignore = ["E501", "B008", "UP007"]

[tool.black]
line-length = 88
target-version = ['py310']