[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aide-backend"
version = "0.1.0"
description = "FastAPI backend for AIDE ML agent"
readme = "README.md"
license = "MIT"
authors = [
    { name = "AIDE ML Team" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-socketio>=5.11.0",
    "aiofiles>=23.2.1",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    # Core ML dependencies for AIDE integration
    "anthropic>=0.39.0",
    "openai>=1.34.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "omegaconf>=2.3.0",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "RET", "SIM"]
ignore = ["E501", "B008", "UP007"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.setuptools]
py-modules = ["main", "models", "websocket_manager"]
packages = ["services"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.py"]
